# Polaris

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
cmake/: config.cmake
cmake/PolarisLib/: CMakeLists.txt
include/: Polaris.h  PolarisDataType.h  PolarisInfo.h  PolarisMacro.h
include/Core/: functional.h
include/Core/Array/: Array.h
include/Core/IO/: IO.h
include/Core/LinearAlgebra/: gemm.cuh  gemm.h
include/Core/Math/: Matrix3.h  MatrixBase.h  Quaternion.h  Vector2.h  Vector3.h
include/Core/Matrix/: Matrix.h
include/Core/Memory/: allocator_CUDA.h
include/Core/Storage/: Storage.h
include/Core/Timer/: Timer.h
include/Platform/: Platforms.h
include/Platform/CUDA/: kernelLaunch.h
include/Rigid/: RigidBody.h
include/Test/Core/: AllocatorTest.h  ArrayTest.h  MathTest.h  MatrixTest.h  StorageTest.h
old/: LinearAlgebra.hpp  LinearSolver.hpp  Matrix.hpp  Vector2.hpp
src/: main.cpp
src/Core/: CMakeLists.txt
src/Core/LinearAlgebra/: gemm.cu
src/Rigid/: RigidBody.cpp
src/Test/Core/: AllocatorTest.cpp  AllocatorTest.cu  ArrayTest.cpp  ArrayTest.cu  MathTest.cpp  MatrixTest.cpp  MatrixTest.cu  StorageTest.cpp  StorageTest.cu
src/Test/Regid/: RigidBodyTest.cpp
